Modify getRootBackbone in WURCSGraph for cyclic